# youtube_view_count_prediction

./: .gitignore  Dockerfile  pyproject.toml
lib/entity/: schema.py
lib/interface/: pipeline.py  repository.py
lib/pipeline/: feature.py  training.py
lib/repository/: load_data.py
lib/service/: data.py  feature.py  preprocess.py
src/notebooks/: EDA.ipynb  embedding.ipynb  pipeline.ipynb  schema.ipynb  training.ipynb
