[tool.poetry]
name = "youtube-predict-view-count"
version = "0.1.0"
description = ""
authors = ["y1u0d2a1i <y.kotani@raksul.com>"]
readme = "README.md"
packages = [{include = "lib"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
openpyxl = "^3.1.2"
sentence-transformers = "^2.2.2"
mlflow = "^2.8.1"
pandera = "^0.17.2"
lightgbm = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
